[project]
name = "fs-pyutils"
version = "1.0.0"
description = "Python utils for fseasy scope."
readme = "README.md"
authors = [{ name = "fseasy", email = "xuwei.fs@outlook.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/fs_pyutils"]
